--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Milestone Website</title>
 </head>
 <body>
-    
+    <ul>
+        <li><h1></h1></li>
+        <img src="" alt="">
+        <li><h1></h1></li>
+        <img src="" alt="">
+        <li><h1></h1></li>
+        <img src="" alt="">
+        <li><h1></h1></li>
+        <img src="" alt="">
+        <li><h1></h1></li>
+        <img src="" alt="">
+    </ul>
 </body>
 </html>
