--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
 </head>
 <body>
     <ul>
-        <li><h1></h1></li>
+        <li><h1>Wireless Broadcast </h1></li>
+        <img src="wireless.htm" alt="">
+        <li><h1> Audion Signal detector</h1></li>
         <img src="" alt="">
-        <li><h1></h1></li>
+        <li><h1> Superheterodyne Circuit</h1></li>
         <img src="" alt="">
-        <li><h1></h1></li>
+        <li><h1> Stereophonic Broadcasting</h1></li>
         <img src="" alt="">
-        <li><h1></h1></li>
-        <img src="" alt="">
-        <li><h1></h1></li>
+        <li><h1> Digital Audio Broadcasting</h1></li>
         <img src="" alt="">
     </ul>
     <table border="1">
