--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <ul>
         <li><h1>Wireless Broadcast </h1></li>
-        <img src="wireless.htm" alt="">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/34/SCR188.jpg/290px-SCR188.jpg" alt="">
         <li><h1> Audion Signal detector</h1></li>
         <img src="" alt="">
         <li><h1> Superheterodyne Circuit</h1></li>
@@ -18,7 +18,7 @@
         <li><h1> Digital Audio Broadcasting</h1></li>
         <img src="" alt="">
     </ul>
-    jjjjjjjj
+    
     <table border="1">
 
     </table>
