--- a/index.html
+++ b/index.html
@@ -8,13 +8,17 @@
 <body>
     <ul>
         <li><h1>Wireless Broadcast </h1></li>
-        <a href="https://en.wikipedia.org/wiki/Wireless_telegraphy">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/34/SCR188.jpg/290px-SCR188.jpg" alt="">
+        <a href="https://www.analog.com/en/resources/analog-dialogue/articles/a-selected-history-on-receiver-innovations-over-the-last-100-years.html">
+            <img src="https://www.analog.com/en/_/media/images/analog-dialogue/en/volume-52/number-3/articles/a-selected-history-on-receiver-innovations-over-the-last-100-years/199327_fig-01.jpg?la=en&rev=1024ce9e4b524e47842a2b0f458b4558&sc_lang=en" alt="">
         </a>
             <li><h1> Audion Signal detector</h1></li>
-        <img src="" alt="">
+        <a href="https://www.analog.com/en/resources/analog-dialogue/articles/a-selected-history-on-receiver-innovations-over-the-last-100-years.html"
+             <img src="https://www.analog.com/en/_/media/images/analog-dialogue/en/volume-52/number-3/articles/a-selected-history-on-receiver-innovations-over-the-last-100-years/199327_fig-09.jpg?la=en&rev=b14b52bf31684d7cb7b57a3ded812038&sc_lang=en" alt="">
+        </a>
         <li><h1> Superheterodyne Circuit</h1></li>
+        <a href=""
         <img src="" alt="">
+    </a>
         <li><h1> Stereophonic Broadcasting</h1></li>
         <img src="" alt="">
         <li><h1> Digital Audio Broadcasting</h1></li>
