--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
             <img src="https://www.analog.com/en/_/media/images/analog-dialogue/en/volume-52/number-3/articles/a-selected-history-on-receiver-innovations-over-the-last-100-years/199327_fig-01.jpg?la=en&rev=1024ce9e4b524e47842a2b0f458b4558&sc_lang=en" alt="">
         </a>
             <li><h1> Audion Signal detector</h1></li>
-        <a href="https://www.analog.com/en/resources/analog-dialogue/articles/a-selected-history-on-receiver-innovations-over-the-last-100-years.html"
+        <a href="https://www.analog.com/en/resources/analog-dialogue/articles/a-selected-history-on-receiver-innovations-over-the-last-100-years.html">
              <img src="https://www.analog.com/en/_/media/images/analog-dialogue/en/volume-52/number-3/articles/a-selected-history-on-receiver-innovations-over-the-last-100-years/199327_fig-09.jpg?la=en&rev=b14b52bf31684d7cb7b57a3ded812038&sc_lang=en" alt="">
         </a>
         <li><h1> Superheterodyne Circuit</h1></li>
-        <a href=""
+        <a href="">
         <img src="" alt="">
     </a>
         <li><h1> Stereophonic Broadcasting</h1></li>
