--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
         </a>
             <li><h1> Audion Signal detector</h1></li>
         <a href="https://www.analog.com/en/resources/analog-dialogue/articles/a-selected-history-on-receiver-innovations-over-the-last-100-years.html">
-             <img src="https://www.analog.com/en/_/media/images/analog-dialogue/en/volume-52/number-3/articles/a-selected-history-on-receiver-innovations-over-the-last-100-years/199327_fig-09.jpg?la=en&rev=b14b52bf31684d7cb7b57a3ded812038&sc_lang=en" alt="">
+             <img src="https://www.analog.com/en/_/media/images/analog-dialogue/en/volume-52/number-3/articles/a-selected-history-on-receiver-innovations-over-the-last-100-years/199327_fig-07.jpg?la=en&rev=e658037fb80f481389c12a09a79ef06e&sc_lang=en" alt="">
         </a>
         <li><h1> Superheterodyne Circuit</h1></li>
-        <a href="">
-        <img src="" alt="">
-    </a>
+        <a href="https://www.analog.com/en/resources/analog-dialogue/articles/a-selected-history-on-receiver-innovations-over-the-last-100-years.html">
+            <img src="https://www.analog.com/en/_/media/images/analog-dialogue/en/volume-52/number-3/articles/a-selected-history-on-receiver-innovations-over-the-last-100-years/199327_fig-09.jpg?la=en&rev=b14b52bf31684d7cb7b57a3ded812038&sc_lang=en" alt="">
+       </a>
         <li><h1> Stereophonic Broadcasting</h1></li>
-        <img src="" alt="">
+        <a href="https://en.wikipedia.org/wiki/Stereophonic_sound">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/23/Aiwa_NSX-S202_front_view_20100620.jpg/220px-Aiwa_NSX-S202_front_view_20100620.jpg" alt="">
+        </a>
         <li><h1> Digital Audio Broadcasting</h1></li>
         <img src="" alt="">
     </ul>
