--- a/index.html
+++ b/index.html
@@ -21,16 +21,19 @@
         <a href="https://www.analog.com/en/resources/analog-dialogue/articles/a-selected-history-on-receiver-innovations-over-the-last-100-years.html">
             <img src="https://www.analog.com/en/_/media/images/analog-dialogue/en/volume-52/number-3/articles/a-selected-history-on-receiver-innovations-over-the-last-100-years/199327_fig-09.jpg?la=en&rev=b14b52bf31684d7cb7b57a3ded812038&sc_lang=en" alt="">
        </a>
-       <p>Source: Brad Brannon. </p>
+       <p>Source: Brad Brannon. Magnetic detecor as Marconi would have used. 2018. Analog Dialouge. (https://www.analog.com/en/_/media/images/analog-dialogue/en/volume-52/number-3/articles/a-selected-history-on-receiver-innovations-over-the-last-100-years/199327_fig-09.jpg?la=en&rev=b14b52bf31684d7cb7b57a3ded812038&sc_lang=en)  </p>
         <li><h1 style="color: darkslateblue; background-color: fuchsia;"> Stereophonic Broadcasting</h1></li>
         <a href="https://en.wikipedia.org/wiki/Stereophonic_sound">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/23/Aiwa_NSX-S202_front_view_20100620.jpg/220px-Aiwa_NSX-S202_front_view_20100620.jpg" alt="">
         </a>
-        <p></p>
+        <p> Source: Paul. Domestic stereo system having two speakers. 2024. Wikipedia. (https://upload.wikimedia.org/wikipedia/commons/thumb/2/23/Aiwa_NSX-S202_front_view_20100620.jpg/220px-Aiwa_NSX-S202_front_view_20100620.jpg) </p>
         <li><h1 style="color: hotpink; background-color: gold;"> Digital Audio Broadcasting</h1></li>
         <a href="https://wordpress.org/photos/photo/90165c53e4/">
         <img src="https://pd.w.org/2024/02/90165c53e4a8291d9.44329929-1024x680.jpeg" alt="">
         </a>
+        <p> Nilo Velez. Big audio mixer with multtiple knobs and buttons. 2024. Wordpress. (https://pd.w.org/2024/02/90165c53e4a8291d9.44329929-1024x680.jpeg)
+            
+        </p>
     </ul>
     
     <table border="1">
