--- a/index.html
+++ b/index.html
@@ -38,7 +38,14 @@
     
     <table border="2">
         <tr>
-            <th></th>
+            <th>Wireless Broadcast </th>
+            <th>Audion Signal Detector</th>
+            <th>Superheterodyne Circuit</th>
+            <th>Stereophonic Broadcasting</th>
+            <th>Digital Audio Broadcasting</th>
+        </tr>
+        <tr>
+            
         </tr>
     </table>
 </body>
