--- a/index.html
+++ b/index.html
@@ -45,7 +45,11 @@
             <th>Digital Audio Broadcasting</th>
         </tr>
         <tr>
-            
+            <th>First scheduled broadcast</th>
+            <th>Made the signal stronger across the world</th>
+            <th>Audible version of the RF signal</th>
+            <th>Improved sound quality</th>
+            <th>High quality sound and recording</th>
         </tr>
     </table>
 </body>
