--- a/index.html
+++ b/index.html
@@ -7,27 +7,27 @@
 </head>
 <body>
     <ul>
-        <li><h1 style="color:aqua; background-color: blueviolet;">Wireless Broadcast </h1></li>
+        <li><h1>Wireless Broadcast </h1></li>
         <a href="https://www.analog.com/en/resources/analog-dialogue/articles/a-selected-history-on-receiver-innovations-over-the-last-100-years.html">
             <img src="https://www.analog.com/en/_/media/images/analog-dialogue/en/volume-52/number-3/articles/a-selected-history-on-receiver-innovations-over-the-last-100-years/199327_fig-01.jpg?la=en&rev=1024ce9e4b524e47842a2b0f458b4558&sc_lang=en" alt="">
         </a>
         <p> Source: Brad Brannon. Marconi demonstarting his technology. 1920. Analog Dialouge. (https://www.analog.com/en/_/media/images/analog-dialogue/en/volume-52/number-3/articles/a-selected-history-on-receiver-innovations-over-the-last-100-years/199327_fig-01.jpg?la=en&rev=1024ce9e4b524e47842a2b0f458b4558&sc_lang=en) </p>
-            <li><h1 style="color: rgb(229, 127, 255); background-color: coral;"> Audion Signal detector</h1></li>
+            <li><h1> Audion Signal detector</h1></li>
         <a href="https://www.analog.com/en/resources/analog-dialogue/articles/a-selected-history-on-receiver-innovations-over-the-last-100-years.html">
              <img src="https://www.analog.com/en/_/media/images/analog-dialogue/en/volume-52/number-3/articles/a-selected-history-on-receiver-innovations-over-the-last-100-years/199327_fig-07.jpg?la=en&rev=e658037fb80f481389c12a09a79ef06e&sc_lang=en" alt="">
         </a>
         <p>Source: Brad Brannon. Electrolytic Detector. 1903. Analog Dialouge. (https://www.analog.com/en/_/media/images/analog-dialogue/en/volume-52/number-3/articles/a-selected-history-on-receiver-innovations-over-the-last-100-years/199327_fig-07.jpg?la=en&rev=e658037fb80f481389c12a09a79ef06e&sc_lang=en)</p>
-        <li><h1 style="color: crimson; background-color: darkgray;"> Superheterodyne Circuit</h1></li>
+        <li><h1> Superheterodyne Circuit</h1></li>
         <a href="https://www.analog.com/en/resources/analog-dialogue/articles/a-selected-history-on-receiver-innovations-over-the-last-100-years.html">
             <img src="https://www.analog.com/en/_/media/images/analog-dialogue/en/volume-52/number-3/articles/a-selected-history-on-receiver-innovations-over-the-last-100-years/199327_fig-09.jpg?la=en&rev=b14b52bf31684d7cb7b57a3ded812038&sc_lang=en" alt="">
        </a>
        <p>Source: Brad Brannon. Magnetic detecor as Marconi would have used. 2018. Analog Dialouge. (https://www.analog.com/en/_/media/images/analog-dialogue/en/volume-52/number-3/articles/a-selected-history-on-receiver-innovations-over-the-last-100-years/199327_fig-09.jpg?la=en&rev=b14b52bf31684d7cb7b57a3ded812038&sc_lang=en)  </p>
-        <li><h1 style="color: darkslateblue; background-color: fuchsia;"> Stereophonic Broadcasting</h1></li>
+        <li><h1> Stereophonic Broadcasting</h1></li>
         <a href="https://en.wikipedia.org/wiki/Stereophonic_sound">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/23/Aiwa_NSX-S202_front_view_20100620.jpg/220px-Aiwa_NSX-S202_front_view_20100620.jpg" alt="">
         </a>
         <p> Source: Paul. Domestic stereo system having two speakers. 2024. Wikipedia. (https://upload.wikimedia.org/wikipedia/commons/thumb/2/23/Aiwa_NSX-S202_front_view_20100620.jpg/220px-Aiwa_NSX-S202_front_view_20100620.jpg) </p>
-        <li><h1 style="color: hotpink; background-color: gold;"> Digital Audio Broadcasting</h1></li>
+        <li><h1> Digital Audio Broadcasting</h1></li>
         <a href="https://wordpress.org/photos/photo/90165c53e4/">
         <img src="https://pd.w.org/2024/02/90165c53e4a8291d9.44329929-1024x680.jpeg" alt="">
         </a>
