--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             color:darkmagenta;
         }
         .alert{
-            background-color: aquamarine;
+            background-color: rgb(240, 127, 255);
         }
     </style>
 </head>
