--- a/index.html
+++ b/index.html
@@ -9,14 +9,17 @@
             color:darkmagenta;
         }
         .alert{
-            background-color: rgb(240, 127, 255);
+            color: rgb(240, 127, 255);
+        }
+        #logo{
+            background-color: deeppink;
         }
     </style>
 </head>
 <body>
     <ul>
         <li><h1>Wireless Broadcast </h1></li>
-        <a href="https://www.analog.com/en/resources/analog-dialogue/articles/a-selected-history-on-receiver-innovations-over-the-last-100-years.html">
+        <a id="logo" href="https://www.analog.com/en/resources/analog-dialogue/articles/a-selected-history-on-receiver-innovations-over-the-last-100-years.html">
             <img src="https://www.analog.com/en/_/media/images/analog-dialogue/en/volume-52/number-3/articles/a-selected-history-on-receiver-innovations-over-the-last-100-years/199327_fig-01.jpg?la=en&rev=1024ce9e4b524e47842a2b0f458b4558&sc_lang=en" alt="">
         </a>
         <p class="alert"> Source: Brad Brannon. Marconi demonstarting his technology. 1920. Analog Dialouge. (https://www.analog.com/en/_/media/images/analog-dialogue/en/volume-52/number-3/articles/a-selected-history-on-receiver-innovations-over-the-last-100-years/199327_fig-01.jpg?la=en&rev=1024ce9e4b524e47842a2b0f458b4558&sc_lang=en) </p>
