--- a/index.html
+++ b/index.html
@@ -4,16 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Milestone Website</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <style>
-        h1{
-            color:darkmagenta;
-        }
-        .alert{
-            color: rgb(240, 127, 255);
-        }
-        #logo{
-            background-color: deeppink;
-        }
     </style>
 </head>
 <body>
@@ -49,7 +41,7 @@
     
     <table border="2">
         <tr>
-            <th>Wireless Broadcast </th>
+            <th> <a herf="Wireless Broadcast"></a> </th>
             <th>Audion Signal Detector</th>
             <th>Superheterodyne Circuit</th>
             <th>Stereophonic Broadcasting</th>
