--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
     
     <table border="2">
         <tr>
-            <th> <a herf="Wireless Broadcast">Wireless Broadcast</a> </th>
-            <th> <a herf="Audion Signal Detector">Audion Signal Detector</a></th>
-            <th> <a herf="Superheterodyne Circuit">Superheterodyne Circuit</a></th>
-            <th><a herf="Stereophonic Broadcasting">Stereophonic Broadcasting</a></th>
-            <th> <a herf="Digital Audio Broadcasting">Digital Audio Broadcasting</a></th>
+            <th> <a href="Wireless Broadcast">Wireless Broadcast</a> </th>
+            <th> <a href="Audion Signal Detector">Audion Signal Detector</a></th>
+            <th> <a href="Superheterodyne Circuit">Superheterodyne Circuit</a></th>
+            <th><a href="Stereophonic Broadcasting">Stereophonic Broadcasting</a></th>
+            <th> <a href="Digital Audio Broadcasting">Digital Audio Broadcasting</a></th>
         </tr>
         <tr>
             <th>First scheduled broadcast</th>
