--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
     
     <table border="2">
         <tr>
-            <th> <a href="Wireless Broadcast">Wireless Broadcast</a> </th>
-            <th> <a href="Audion Signal Detector">Audion Signal Detector</a></th>
-            <th> <a href="Superheterodyne Circuit">Superheterodyne Circuit</a></th>
-            <th><a href="Stereophonic Broadcasting">Stereophonic Broadcasting</a></th>
-            <th> <a href="Digital Audio Broadcasting">Digital Audio Broadcasting</a></th>
+            <th> <a href="WirelessBroadcast">Wireless Broadcast</a> </th>
+            <th> <a href="AudionSignalDetector">Audion Signal Detector</a></th>
+            <th> <a href="SuperheterodyneCircuit">Superheterodyne Circuit</a></th>
+            <th><a href="StereophonicBroadcasting">Stereophonic Broadcasting</a></th>
+            <th> <a href="DigitalAudioBroadcasting">Digital Audio Broadcasting</a></th>
         </tr>
         <tr>
             <th>First scheduled broadcast</th>
