--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
     
     <table border="2">
         <tr>
-            <th> <a href="WirelessBroadcast">Wireless Broadcast</a> </th>
-            <th> <a href="AudionSignalDetector">Audion Signal Detector</a></th>
-            <th> <a href="SuperheterodyneCircuit">Superheterodyne Circuit</a></th>
-            <th><a href="StereophonicBroadcasting">Stereophonic Broadcasting</a></th>
-            <th> <a href="DigitalAudioBroadcasting">Digital Audio Broadcasting</a></th>
+            <th> <a href="wirelessbroadcast.html">Wireless Broadcast</a> </th>
+            <th> <a href="audionsignaldetector.html">Audion Signal Detector</a></th>
+            <th> <a href="superheterodynecircuit.html">Superheterodyne Circuit</a></th>
+            <th><a href="stereophonicbroadcasting.html">Stereophonic Broadcasting</a></th>
+            <th> <a href="digitalaudiobroadcasting.html">Digital Audio Broadcasting</a></th>
         </tr>
         <tr>
             <th>First scheduled broadcast</th>
