--- a/audionsignaldetector.html
+++ b/audionsignaldetector.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <div class="1">
+        <div class="Neo">
             <h1>
                 Audion Signal Detector
             </h1>
