--- a/digitalaudiobroadcasting.html
+++ b/digitalaudiobroadcasting.html
@@ -23,3 +23,4 @@ CTYPE html>
     <footer>
         <a href="https://en.wikipedia.org/wiki/Digital_Audio_Broadcasting#DAB+">Wikipedia</a>
     </footer>
+</body>
