--- a/audionsignaldetector.html
+++ b/audionsignaldetector.html
@@ -20,9 +20,33 @@
         <img src="https://www.analog.com/en/_/media/images/analog-dialogue/en/volume-52/number-3/articles/a-selected-history-on-receiver-innovations-over-the-last-100-years/199327_fig-07.jpg?la=en&rev=e658037fb80f481389c12a09a79ef06e&sc_lang=en" alt="">
         <p>
             While there were many contributors to the early days of wireless, Guglielmo Marconi is one of the more prominent.For about 20 years after the start of the 1900s, he built a critical business that launched the world of wireless toward what we have today.
+            <table border="2">
+                <tr>
+                    <th> <a href="wirelessbroadcast.html">Wireless Broadcast</a> </th>
+                    <th> <a href="audionsignaldetector.html">Audion Signal Detector</a></th>
+                    <th> <a href="superheterodynecircuit.html">Superheterodyne Circuit</a></th>
+                    <th><a href="stereophonicbroadcasting.html">Stereophonic Broadcasting</a></th>
+                    <th> <a href="digitalaudiobroadcasting.html">Digital Audio Broadcasting</a></th>
+                </tr>
+                <tr>
+                    <th>First scheduled broadcast</th>
+                    <th>Made the signal stronger across the world</th>
+                    <th>Audible version of the RF signal</th>
+                    <th>Improved sound quality</th>
+                    <th>High quality sound and recording</th>
+                </tr>
+                <tr>
+                    <th>1920</th>
+                    <th>1903</th>
+                    <th>1930</th>
+                    <th>1933</th>
+                    <th>1961</th>
+                </tr>
+            </table>
         </p>
     </main>
     <footer>
         <a href="https://www.analog.com/en/resources/analog-dialogue/articles/a-selected-history-on-receiver-innovations-over-the-last-100-years.html">Analog Dialogue</a>
     </footer>
 </body>
+</html>
