--- a/digitalaudiobroadcasting.html
+++ b/digitalaudiobroadcasting.html
@@ -18,9 +18,33 @@ CTYPE html>
         <p>
             <img src="https://pd.w.org/2024/02/90165c53e4a8291d9.44329929-1024x680.jpeg" alt="">
             When a receiver receives a signal that has been transmitted from the different transmitters that are part of an SFN, the signals from the different transmitters will typically have different delays, but to OFDM they will appear to simply be different multipaths of the same signal. 
+            <table border="2">
+                <tr>
+                    <th> <a href="wirelessbroadcast.html">Wireless Broadcast</a> </th>
+                    <th> <a href="audionsignaldetector.html">Audion Signal Detector</a></th>
+                    <th> <a href="superheterodynecircuit.html">Superheterodyne Circuit</a></th>
+                    <th><a href="stereophonicbroadcasting.html">Stereophonic Broadcasting</a></th>
+                    <th> <a href="digitalaudiobroadcasting.html">Digital Audio Broadcasting</a></th>
+                </tr>
+                <tr>
+                    <th>First scheduled broadcast</th>
+                    <th>Made the signal stronger across the world</th>
+                    <th>Audible version of the RF signal</th>
+                    <th>Improved sound quality</th>
+                    <th>High quality sound and recording</th>
+                </tr>
+                <tr>
+                    <th>1920</th>
+                    <th>1903</th>
+                    <th>1930</th>
+                    <th>1933</th>
+                    <th>1961</th>
+                </tr>
+            </table>
         </p>
     </main>
     <footer>
         <a href="https://en.wikipedia.org/wiki/Digital_Audio_Broadcasting#DAB+">Wikipedia</a>
     </footer>
 </body>
+</html>
