--- a/stereophonicbroadcasting.html
+++ b/stereophonicbroadcasting.html
@@ -16,9 +16,33 @@ CTYPE html>
         <p>
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/23/Aiwa_NSX-S202_front_view_20100620.jpg/220px-Aiwa_NSX-S202_front_view_20100620.jpg" alt="">  
         Stereophonic sound, or more commonly stereo, is a method of sound reproduction that recreates a multi-directional, 3-dimensional audible perspective. This is usually achieved by using two independent audio channels through a configuration of two loudspeakers (or stereo headphones) in such a way as to create the impression of sound heard from various directions, as in natural hearing.
+        <table border="2">
+            <tr>
+                <th> <a href="wirelessbroadcast.html">Wireless Broadcast</a> </th>
+                <th> <a href="audionsignaldetector.html">Audion Signal Detector</a></th>
+                <th> <a href="superheterodynecircuit.html">Superheterodyne Circuit</a></th>
+                <th><a href="stereophonicbroadcasting.html">Stereophonic Broadcasting</a></th>
+                <th> <a href="digitalaudiobroadcasting.html">Digital Audio Broadcasting</a></th>
+            </tr>
+            <tr>
+                <th>First scheduled broadcast</th>
+                <th>Made the signal stronger across the world</th>
+                <th>Audible version of the RF signal</th>
+                <th>Improved sound quality</th>
+                <th>High quality sound and recording</th>
+            </tr>
+            <tr>
+                <th>1920</th>
+                <th>1903</th>
+                <th>1930</th>
+                <th>1933</th>
+                <th>1961</th>
+            </tr>
+        </table>
     </p>
     </main>
     <footer>
         <a href="https://en.wikipedia.org/wiki/Stereophonic_sound">Wikipedia</a>
     </footer>
 </body>
+</html>
