--- a/superheterodynecircuit.html
+++ b/superheterodynecircuit.html
@@ -17,10 +17,34 @@
     <main class="Matrix">
         <p>
         <img src="https://www.analog.com/en/_/media/images/analog-dialogue/en/volume-52/number-3/articles/a-selected-history-on-receiver-innovations-over-the-last-100-years/199327_fig-09.jpg?la=en&rev=b14b52bf31684d7cb7b57a3ded812038&sc_lang=en" alt="">
-        Another common type detector was the crystal detector, which remained popular until around 1925. This type of popular device was often referred to as a cat whisker and was basically an early semiconductor junction fashioned out of various types of mineral
+        Another common type detector was the crystal detector, which remained popular until around 1925. This type of popular device was often referred to as a cat whisker and was basically an early semiconductor junction fashioned out of various types of mineral.
+        <table border="2">
+            <tr>
+                <th> <a href="wirelessbroadcast.html">Wireless Broadcast</a> </th>
+                <th> <a href="audionsignaldetector.html">Audion Signal Detector</a></th>
+                <th> <a href="superheterodynecircuit.html">Superheterodyne Circuit</a></th>
+                <th><a href="stereophonicbroadcasting.html">Stereophonic Broadcasting</a></th>
+                <th> <a href="digitalaudiobroadcasting.html">Digital Audio Broadcasting</a></th>
+            </tr>
+            <tr>
+                <th>First scheduled broadcast</th>
+                <th>Made the signal stronger across the world</th>
+                <th>Audible version of the RF signal</th>
+                <th>Improved sound quality</th>
+                <th>High quality sound and recording</th>
+            </tr>
+            <tr>
+                <th>1920</th>
+                <th>1903</th>
+                <th>1930</th>
+                <th>1933</th>
+                <th>1961</th>
+            </tr>
+        </table>
 </p>
     </main>
     <footer>
         <a href="https://codehs.com/student/5292402/section/563685/assignment/107836103?filepath=jobinfo.html">Analog Dialogue</a>
     </footer>
 </body>
+</html>
