--- a/wirelessbroadcast.html
+++ b/wirelessbroadcast.html
@@ -9,6 +9,42 @@
     </style>
 </head>
 <body>
+    <header class="Neo">
+        <h1>Wireless Broadcast</h1>
+    </header>
+    <main class="matrix">
+        <p>
+            <img src="https://www.analog.com/en/_/media/images/analog-dialogue/en/volume-52/number-3/articles/a-selected-history-on-receiver-innovations-over-the-last-100-years/199327_fig-01.jpg?la=en&rev=1024ce9e4b524e47842a2b0f458b4558&sc_lang=en">
+            The transmitters employed spark gap devices (only later did they employ mechanical alternators) to generate the RF, but on the receiving end, the systems were fully passive and consisted of an antenna, resonant LC tuner, and some sort of detector.
+            <table border="2">
+                <tr>
+                    <th> <a href="wirelessbroadcast.html">Wireless Broadcast</a> </th>
+                    <th> <a href="audionsignaldetector.html">Audion Signal Detector</a></th>
+                    <th> <a href="superheterodynecircuit.html">Superheterodyne Circuit</a></th>
+                    <th><a href="stereophonicbroadcasting.html">Stereophonic Broadcasting</a></th>
+                    <th> <a href="digitalaudiobroadcasting.html">Digital Audio Broadcasting</a></th>
+                </tr>
+                <tr>
+                    <th>First scheduled broadcast</th>
+                    <th>Made the signal stronger across the world</th>
+                    <th>Audible version of the RF signal</th>
+                    <th>Improved sound quality</th>
+                    <th>High quality sound and recording</th>
+                </tr>
+                <tr>
+                    <th>1920</th>
+                    <th>1903</th>
+                    <th>1930</th>
+                    <th>1933</th>
+                    <th>1961</th>
+                </tr>
+            </table>
+        </p>
+    </main>
+    <footer>
+        <a href="https://www.analog.com/en/resources/analog-dialogue/articles/a-selected-history-on-receiver-innovations-over-the-last-100-years.html"></a>
+            
+    </footer>
 
 </body>
 </html>
