--- a/wirelessbroadcast.html
+++ b/wirelessbroadcast.html
@@ -12,7 +12,7 @@
     <header class="Neo">
         <h1>Wireless Broadcast</h1>
     </header>
-    <main class="matrix">
+    <main class="Matrix">
         <p>
             <img src="https://www.analog.com/en/_/media/images/analog-dialogue/en/volume-52/number-3/articles/a-selected-history-on-receiver-innovations-over-the-last-100-years/199327_fig-01.jpg?la=en&rev=1024ce9e4b524e47842a2b0f458b4558&sc_lang=en">
             The transmitters employed spark gap devices (only later did they employ mechanical alternators) to generate the RF, but on the receiving end, the systems were fully passive and consisted of an antenna, resonant LC tuner, and some sort of detector.
