--- a/stereophonicbroadcasting.html
+++ b/stereophonicbroadcasting.html
@@ -16,7 +16,7 @@
     </header>
     <main class="Matrix">
         <p>
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/23/Aiwa_NSX-S202_front_view_20100620.jpg/220px-Aiwa_NSX-S202_front_view_20100620.jpg" alt="">  
+            <img  class="pic" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/23/Aiwa_NSX-S202_front_view_20100620.jpg/220px-Aiwa_NSX-S202_front_view_20100620.jpg" alt="">  
         Stereophonic sound, or more commonly stereo, is a method of sound reproduction that recreates a multi-directional, 3-dimensional audible perspective. This is usually achieved by using two independent audio channels through a configuration of two loudspeakers (or stereo headphones) in such a way as to create the impression of sound heard from various directions, as in natural hearing.
         <table border="2">
             <tr>
