--- a/superheterodynecircuit.html
+++ b/superheterodynecircuit.html
@@ -16,7 +16,7 @@
     </header>
     <main class="Matrix">
         <p>
-        <img src="https://www.analog.com/en/_/media/images/analog-dialogue/en/volume-52/number-3/articles/a-selected-history-on-receiver-innovations-over-the-last-100-years/199327_fig-09.jpg?la=en&rev=b14b52bf31684d7cb7b57a3ded812038&sc_lang=en" alt="">
+        <img class="pic" src="https://www.analog.com/en/_/media/images/analog-dialogue/en/volume-52/number-3/articles/a-selected-history-on-receiver-innovations-over-the-last-100-years/199327_fig-09.jpg?la=en&rev=b14b52bf31684d7cb7b57a3ded812038&sc_lang=en" alt="">
         Another common type detector was the crystal detector, which remained popular until around 1925. This type of popular device was often referred to as a cat whisker and was basically an early semiconductor junction fashioned out of various types of mineral.
         <table border="2">
             <tr>
