--- a/digitalaudiobroadcasting.html
+++ b/digitalaudiobroadcasting.html
@@ -16,7 +16,7 @@
     </header>
     <main class="Matrix">
         <p>
-            <img src="https://pd.w.org/2024/02/90165c53e4a8291d9.44329929-1024x680.jpeg" alt="">
+            <img class="pic" src="https://pd.w.org/2024/02/90165c53e4a8291d9.44329929-1024x680.jpeg" alt="">
             When a receiver receives a signal that has been transmitted from the different transmitters that are part of an SFN, the signals from the different transmitters will typically have different delays, but to OFDM they will appear to simply be different multipaths of the same signal. 
             <table border="2">
                 <tr>
