--- a/wirelessbroadcast.html
+++ b/wirelessbroadcast.html
@@ -45,6 +45,7 @@
         <a href="https://www.analog.com/en/resources/analog-dialogue/articles/a-selected-history-on-receiver-innovations-over-the-last-100-years.html"></a>
             
     </footer>
-
+    <a href="https://codehs.com/student/5292402/section/563685/assignment/107836103?filepath=jobinfo.html">Analog Dialogue</a>
+</footer>
 </body>
 </html>
